--- a/views/pages/marketplace.ejs
+++ b/views/pages/marketplace.ejs
@@ -63,7 +63,7 @@
         >
         <% } %>
       </div>
-      <section class="grid gap-2 grid-cols-auto" id="event-spaces">
+      <section class="grid gap-3 grid-cols-auto" id="event-spaces">
         <% if (categories.length == 0) { %>
         <h2
           class="text-4xl font-serif font-bold text-[#a05231] text-center my-5 px-2"
@@ -95,11 +95,11 @@
             <div class="flex gap-2 items-center bg-[#7ab9af]/30 px-2 py-1">
               <img
                 src="data:image/<%=space.manager.photo.contentType%>;base64,
-                <%=space.manager.photo.data.toString('base64') %>"
+                <%= space.manager.photo.data.toString('base64') %>"
                 alt="Manager's picture"
-                width="30px"
+                class="rounded-full w-8 h-8 object-cover"
               />
-              <span><%= space.manager.user.fullName %></span>
+              <span class="font-rubik text-sm text-[#dfb25a]"><%= space.manager.user.fullName %></span>
             </div>
             <h1
               class="font-serif px-2 text-[#227791] text-2xl sm:text-3xl font-semibold"
@@ -111,7 +111,7 @@
               <%= space.desc %>
             </p>
           </div>
-          <div class="flex gap-2 my-4 px-2 items-center">
+          <div class="flex gap-2 my-4 px-2 items-center self-center">
             <div
               class="flex gap-1 bg-white p-1 rounded-full items-center min-w-max"
             >
@@ -151,7 +151,7 @@
             </p>
             <a
               href="/dashboard/marketplace/<%= space._id %> "
-              class="p-1 rounded-lg drop-shadow-lg shadow-lg bg-[#dfb25a] font-spray"
+              class="bg-[#dfb25a] font-serif underlines"
             >
               View More
             </a>
