--- a/views/pages/my_spaces.ejs
+++ b/views/pages/my_spaces.ejs
@@ -4,7 +4,7 @@
   <body class="flex relative bg-fuchsia-500/5 overflow-hidden overflow-y-auto">
     <%- include('../partials/side_menu') %>
     <main
-      class="flex relative flex-col gap-5 grow min-h-screen px-5 py-8 md:p-10 max-w-6xl mx-auto overflow-hidden overflow-y-auto"
+      class="flex relative flex-col gap-5 grow min-h-screen px-5 pb-8 md:p-10 md:pt-0 max-w-6xl mx-auto overflow-hidden overflow-y-auto"
     >
       <%- include('../partials/err_toast') %> <%-
       include('../partials/success_toast') %>
@@ -19,18 +19,60 @@
           Here is where you find all the event spaces you have posted
         </p>
       </div>
+      <div class="p-2 w-full flex items-center gap-2 justify-end">
+        <hr class="h-1 w-5 grow bg-[#dfb253]" />
+        <a
+          href="/dashboard/spaces/create_new"
+          class="p-3 bg-[#6eb3a9]/80 text-[#a05231] font-sans font-bold rounded-full shadow-lg"
+          >Add Event Space</a
+        >
+      </div>
       <div
-        class="flex flex-wrap gap-8 lg:gap-5 justify-center lg:justify-between"
+        class="flex flex-wrap gap-5 lg:gap-3 items-start justify-center lg:justify-between"
       >
-        <section class="w-full lg:w-7/12 m-auto">
+        <div class="w-full lg:w-7/12 overflow-x-auto relative">
+          <table
+          class="w-full text-sm text-left table-auto max-h-60"
+        >
           <% if (spaces) { %> <% if (spaces.length == 0) { %>
           <div class="m-auto text-center">
-            <p class="text-2xl font-spray py-3 my-3 text-[#dfb253]">You haven't posted any event space</p>
-            <a href="/dashboard/spaces/create_new" class="p-3 bg-[#6eb3a9]/80 text-[#a05231] font-sans font-bold rounded-full shadow-lg">Post an Event Space</a>
+            <p class="text-2xl font-spray py-3 my-3 text-[#dfb253]">
+              You haven't posted any event space
+            </p>
+            <a
+              href="/dashboard/spaces/create_new"
+              class="p-3 bg-[#6eb3a9]/80 text-[#a05231] font-sans font-bold rounded-full shadow-lg"
+              >Add Event Space</a
+            >
           </div>
-          <% } else { %> <% for (const space of spaces) { %>
-          <article><%= space.name %></article>
-          <% } %> <% } %> <% } else { %>
+          <% } else { %>
+          <thead class="font-serif bg-[#6eb3a9] text-xs text-[#a05231] uppercase">
+            <tr>
+              <th scope="col" class="py-3 px-6 border border-[#6eb3a9]">Name</th>
+              <th scope="col" class="py-3 px-6 border border-[#6eb3a9]">Location</th>
+              <th scope="col" class="py-3 px-6 border border-[#6eb3a9]">Views</th>
+              <th scope="col" class="py-3 px-6 border border-[#6eb3a9]">Category</th>
+              <th scope="col" class="py-3 px-6 border border-[#6eb3a9]">Booked</th>
+              <th scope="col" class="py-3 px-6 border border-[#6eb3a9]">Posted On</th>
+              <th scope="col" class="py-3 px-6 border border-[#6eb3a9]">Edited On</th>
+            </tr>
+          </thead>
+          <tbody>
+            <% for (const space of spaces) { %>
+            <tr class="bg-[#7ab9af]/30 font-sans text-center">
+              <th scope="row" class="py-4 px-6 font-semibold text-[#dfb253]">
+                <a href="/dashboard/marketplace/<%= space._id %>"><%= space.name %></a>
+              </th>
+              <td class="py-4 px-6 font-light text-gray-500"><%= space.location.location %></td>
+              <td class="py-4 px-6 font-light text-gray-500"><%= space.views %></td>
+              <td class="py-4 px-6 font-light text-gray-500"><%= space.category.name %></td>
+              <td class="py-4 px-6 font-light text-gray-500"><%= space.booked %></td>
+              <td class="py-4 px-6 font-light text-gray-500"><%= space.postedOn %></td>
+              <td class="py-4 px-6 font-light text-gray-500"><%= space.editedOn %></td>
+            </tr>
+            <% } %>
+          </tbody>
+          <% } %> <% } else { %>
           <div class="text-center">
             <p
               class="mx-auto md:w-2/3 uppercase text-[#a05231] font-serif font-medium text-xl pb-6"
@@ -45,61 +87,12 @@
               Create A Manager Account
             </button>
           </div>
-          <div
-            class="fixed bg-white/70 top-0 bottom-0 left-0 right-0 z-10 flex justify-center items-center hidden"
-          >
-            <form
-              method="post"
-              class="flex relative flex-col gap-3 p-3 md:p-5 bg-[#6eb3a9]/60 rounded-lg shadow-md shadow-[#a05231]/30 font-sans text-xl text-[#2a5c56]"
-              id="create-form"
-              autocomplete="off"
-              enctype="multipart/form-data"
-            >
-              <span
-                class="cursor-pointer shadow-lg rounded-full text-4xl font-rubik bg-white font-bold px-4 py-2 -right-5 -top-5 absolute"
-                id="close-form-btn"
-                >&times;</span
-              >
-              <h1 class="font-spray text-3xl text-[#a05231]">
-                Create a
-                <span
-                  class="bg-[url('https://uploads-ssl.webflow.com/61cee5eb4d566d3471eca114/61d2f2e602a2a8b328d55188_underline%205.svg')] bg-no-repeat bg-contain bg-bottom"
-                  >Manager Account</span
-                >
-              </h1>
-              <hr class="mb-4 bg-[#dfb253] w-full h-1 rounded-full border-0" />
-              <label for="phone_no-field" class="font-semibold"
-                >Enter your phone number:</label
-              >
-              <input
-                type="tel"
-                name="phoneNumber"
-                id="phone_no-field"
-                class="outline-none rounded-md indent-2 py-1 border-none"
-                required
-              />
-              <label for="photo-field" class="font-semibold"
-                >Select a photo:</label
-              >
-              <input
-                type="file"
-                name="photo"
-                id="photo-field"
-                accept="image/png, image/jpeg"
-                required
-                class="border border-[#a05231] rounded-md p-1 file:px-4 file:py-1 file:border-0 file:shadow-lg file:mr-4 file:rounded-full file:bg-[#dfb253]/40 file:font-semibold file:text-[#a05231] hover:file:bg-violet-100"
-              />
-              <button
-                class="mt-4 p-2 rounded-full bg-[#dfb253] font-bold shadow-xl"
-              >
-                Create Account
-              </button>
-            </form>
-          </div>
+
           <% } %>
-        </section>
+        </table>
+        </div>
         <aside
-          class="flex sticky top-0 w-full my-9 lg:my-0 lg:w-4/12 flex-col gap-2 bg-white p-2 lg:h-96 overflow-y-auto lg:rounded-lg lg:shadow-lg shadow-[#dfb253]/40"
+          class="flex sticky top-0 w-full my-9 lg:my-0 lg:w-4/12 flex-col gap-2 bg-white p-2 h-96 overflow-y-auto lg:rounded-lg lg:shadow-lg shadow-[#dfb253]/40"
         >
           <h1
             class="font-serif py-2 font-bold text-[#6eb3a9] text-2xl text-center"
@@ -110,11 +103,58 @@
               >Activities</span
             >
           </h1>
-          <p class="mx-auto lg:my-auto text-[#dfb253] font-spray text-3xl">
+          <p class="m-auto text-[#dfb253] font-spray text-3xl">
             No Activity
           </p>
         </aside>
       </div>
     </main>
+    <div
+      class="fixed bg-white/70 top-0 bottom-0 left-0 right-0 z-10 flex justify-center items-center hidden"
+    >
+      <form
+        method="post"
+        class="flex relative flex-col gap-3 p-3 md:p-5 bg-[#6eb3a9]/60 rounded-lg shadow-md shadow-[#a05231]/30 font-sans text-xl text-[#2a5c56]"
+        id="create-form"
+        autocomplete="off"
+        enctype="multipart/form-data"
+      >
+        <span
+          class="cursor-pointer shadow-lg rounded-full text-4xl font-rubik bg-white font-bold px-4 py-2 -right-5 -top-5 absolute"
+          id="close-form-btn"
+          >&times;</span
+        >
+        <h1 class="font-spray text-3xl text-[#a05231]">
+          Create a
+          <span
+            class="bg-[url('https://uploads-ssl.webflow.com/61cee5eb4d566d3471eca114/61d2f2e602a2a8b328d55188_underline%205.svg')] bg-no-repeat bg-contain bg-bottom"
+            >Manager Account</span
+          >
+        </h1>
+        <hr class="mb-4 bg-[#dfb253] w-full h-1 rounded-full border-0" />
+        <label for="phone_no-field" class="font-semibold"
+          >Enter your phone number:</label
+        >
+        <input
+          type="tel"
+          name="phoneNumber"
+          id="phone_no-field"
+          class="outline-none rounded-md indent-2 py-1 border-none"
+          required
+        />
+        <label for="photo-field" class="font-semibold">Select a photo:</label>
+        <input
+          type="file"
+          name="photo"
+          id="photo-field"
+          accept="image/png, image/jpeg"
+          required
+          class="border border-[#a05231] rounded-md p-1 file:px-4 file:py-1 file:border-0 file:shadow-lg file:mr-4 file:rounded-full file:bg-[#dfb253]/40 file:font-semibold file:text-[#a05231] hover:file:bg-violet-100"
+        />
+        <button class="mt-4 p-2 rounded-full bg-[#dfb253] font-bold shadow-xl">
+          Create Account
+        </button>
+      </form>
+    </div>
   </body>
 </html>
