--- a/views/pages/my_spaces.ejs
+++ b/views/pages/my_spaces.ejs
@@ -19,6 +19,7 @@
           Here is where you find all the event spaces you have posted
         </p>
       </div>
+      <% if (spaces && spaces.length > 0) { %>
       <div class="p-2 w-full flex items-center gap-2 justify-end">
         <hr class="h-1 w-5 grow bg-[#dfb253]" />
         <a
@@ -27,69 +28,98 @@
           >Add Event Space</a
         >
       </div>
+      <% } %>
       <div
         class="flex flex-wrap gap-5 lg:gap-3 items-start justify-center lg:justify-between"
       >
         <div class="w-full lg:w-7/12 overflow-x-auto relative">
-          <table
-          class="w-full text-sm text-left table-auto max-h-60"
-        >
-          <% if (spaces) { %> <% if (spaces.length == 0) { %>
-          <div class="m-auto text-center">
-            <p class="text-2xl font-spray py-3 my-3 text-[#dfb253]">
-              You haven't posted any event space
-            </p>
-            <a
-              href="/dashboard/spaces/create_new"
-              class="p-3 bg-[#6eb3a9]/80 text-[#a05231] font-sans font-bold rounded-full shadow-lg"
-              >Add Event Space</a
+          <table class="w-full text-sm text-left table-auto max-h-60">
+            <% if (spaces) { %> <% if (spaces.length == 0) { %>
+            <div class="m-auto text-center">
+              <p class="text-2xl font-spray py-3 my-3 text-[#dfb253]">
+                You haven't posted any event space
+              </p>
+              <a
+                href="/dashboard/spaces/create_new"
+                class="p-3 bg-[#6eb3a9]/80 text-[#a05231] font-sans font-bold rounded-full shadow-lg"
+                >Add Event Space</a
+              >
+            </div>
+            <% } else { %>
+            <thead
+              class="font-serif bg-[#6eb3a9] text-xs text-[#a05231] uppercase"
             >
-          </div>
-          <% } else { %>
-          <thead class="font-serif bg-[#6eb3a9] text-xs text-[#a05231] uppercase">
-            <tr>
-              <th scope="col" class="py-3 px-6 border border-[#6eb3a9]">Name</th>
-              <th scope="col" class="py-3 px-6 border border-[#6eb3a9]">Location</th>
-              <th scope="col" class="py-3 px-6 border border-[#6eb3a9]">Views</th>
-              <th scope="col" class="py-3 px-6 border border-[#6eb3a9]">Category</th>
-              <th scope="col" class="py-3 px-6 border border-[#6eb3a9]">Booked</th>
-              <th scope="col" class="py-3 px-6 border border-[#6eb3a9]">Posted On</th>
-              <th scope="col" class="py-3 px-6 border border-[#6eb3a9]">Edited On</th>
-            </tr>
-          </thead>
-          <tbody>
-            <% for (const space of spaces) { %>
-            <tr class="bg-[#7ab9af]/30 font-sans text-center">
-              <th scope="row" class="py-4 px-6 font-semibold text-[#dfb253]">
-                <a href="/dashboard/marketplace/<%= space._id %>"><%= space.name %></a>
-              </th>
-              <td class="py-4 px-6 font-light text-gray-500"><%= space.location.location %></td>
-              <td class="py-4 px-6 font-light text-gray-500"><%= space.views %></td>
-              <td class="py-4 px-6 font-light text-gray-500"><%= space.category.name %></td>
-              <td class="py-4 px-6 font-light text-gray-500"><%= space.booked %></td>
-              <td class="py-4 px-6 font-light text-gray-500"><%= space.postedOn %></td>
-              <td class="py-4 px-6 font-light text-gray-500"><%= space.editedOn %></td>
-            </tr>
-            <% } %>
-          </tbody>
-          <% } %> <% } else { %>
-          <div class="text-center">
-            <p
-              class="mx-auto md:w-2/3 uppercase text-[#a05231] font-serif font-medium text-xl pb-6"
-            >
-              You cannot post an event space until you create a manager's
-              account
-            </p>
-            <button
-              class="bg-[#6eb3a9] inline-block text-white p-3 md:font-mono shadow-md rounded-full font-serif font-bold text-sm md:text-lg"
-              id="create-btn"
-            >
-              Create A Manager Account
-            </button>
-          </div>
+              <tr>
+                <th scope="col" class="py-3 px-6 border border-[#6eb3a9]">
+                  Name
+                </th>
+                <th scope="col" class="py-3 px-6 border border-[#6eb3a9]">
+                  Location
+                </th>
+                <th scope="col" class="py-3 px-6 border border-[#6eb3a9]">
+                  Views
+                </th>
+                <th scope="col" class="py-3 px-6 border border-[#6eb3a9]">
+                  Category
+                </th>
+                <th scope="col" class="py-3 px-6 border border-[#6eb3a9]">
+                  Booked
+                </th>
+                <th scope="col" class="py-3 px-6 border border-[#6eb3a9]">
+                  Posted On
+                </th>
+                <th scope="col" class="py-3 px-6 border border-[#6eb3a9]">
+                  Edited On
+                </th>
+              </tr>
+            </thead>
+            <tbody>
+              <% for (const space of spaces) { %>
+              <tr class="bg-[#7ab9af]/30 font-sans text-center">
+                <th scope="row" class="py-4 px-6 font-semibold text-[#dfb253]">
+                  <a href="/dashboard/marketplace/<%= space._id %>"
+                    ><%= space.name %></a
+                  >
+                </th>
+                <td class="py-4 px-6 font-light text-gray-500">
+                  <%= space.location.location %>
+                </td>
+                <td class="py-4 px-6 font-light text-gray-500">
+                  <%= space.views %>
+                </td>
+                <td class="py-4 px-6 font-light text-gray-500">
+                  <%= space.category.name %>
+                </td>
+                <td class="py-4 px-6 font-light text-gray-500">
+                  <%= space.booked %>
+                </td>
+                <td class="py-4 px-6 font-light text-gray-500">
+                  <%= space.postedOn %>
+                </td>
+                <td class="py-4 px-6 font-light text-gray-500">
+                  <%= space.editedOn %>
+                </td>
+              </tr>
+              <% } %>
+            </tbody>
+            <% } %> <% } else { %>
+            <div class="text-center">
+              <p
+                class="mx-auto md:w-2/3 uppercase text-[#a05231] font-serif font-medium text-xl pb-6"
+              >
+                You cannot post an event space until you create a manager's
+                account
+              </p>
+              <button
+                class="bg-[#6eb3a9] inline-block text-white p-3 md:font-mono shadow-md rounded-full font-serif font-bold text-sm md:text-lg"
+                id="create-btn"
+              >
+                Create A Manager Account
+              </button>
+            </div>
 
-          <% } %>
-        </table>
+            <% } %>
+          </table>
         </div>
         <aside
           class="flex sticky top-0 w-full my-9 lg:my-0 lg:w-4/12 flex-col gap-2 bg-white p-2 h-96 overflow-y-auto lg:rounded-lg lg:shadow-lg shadow-[#dfb253]/40"
@@ -103,9 +133,7 @@
               >Activities</span
             >
           </h1>
-          <p class="m-auto text-[#dfb253] font-spray text-3xl">
-            No Activity
-          </p>
+          <p class="m-auto text-[#dfb253] font-spray text-3xl">No Activity</p>
         </aside>
       </div>
     </main>
