--- a/views/partials/success_toast.ejs
+++ b/views/partials/success_toast.ejs
@@ -1,7 +1,7 @@
 <% if (locals.success_msg) { %>
   <div
-    class="absolute top-1 left-0 border-l-2 border-r-2 max-w-6xl m-auto border-green-500 right-0 p-3 text-green-500 bg-[#6eb3a9]/50"
-    id="error-card"
+    class="absolute top-1 left-0 border-l-2 border-r-2 max-w-6xl m-auto border-green-500 right-0 p-3 text-green-900 bg-[#6eb3a9]/50"
+    id="success-card"
   >
     <span class="font-serif font-semibold"><%= locals.success_msg %></span>
     <button
