--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -492,6 +492,12 @@ video {
 .-right-1 {
   right: -0.25rem;
 }
+.top-1 {
+  top: 0.25rem;
+}
+.right-1 {
+  right: 0.25rem;
+}
 .right-0 {
   right: 0px;
 }
@@ -509,12 +515,6 @@ video {
 }
 .-top-5 {
   top: -1.25rem;
-}
-.top-1 {
-  top: 0.25rem;
-}
-.right-1 {
-  right: 0.25rem;
 }
 .bottom-1 {
   bottom: 0.25rem;
@@ -557,17 +557,21 @@ video {
   margin-left: auto;
   margin-right: auto;
 }
-.mx-1 {
-  margin-left: 0.25rem;
-  margin-right: 0.25rem;
+.my-4 {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
 }
 .my-5 {
   margin-top: 1.25rem;
   margin-bottom: 1.25rem;
 }
-.my-4 {
-  margin-top: 1rem;
-  margin-bottom: 1rem;
+.my-1 {
+  margin-top: 0.25rem;
+  margin-bottom: 0.25rem;
+}
+.mx-1 {
+  margin-left: 0.25rem;
+  margin-right: 0.25rem;
 }
 .my-9 {
   margin-top: 2.25rem;
@@ -592,6 +596,12 @@ video {
 .mb-2 {
   margin-bottom: 0.5rem;
 }
+.mb-3 {
+  margin-bottom: 0.75rem;
+}
+.ml-auto {
+  margin-left: auto;
+}
 .mt-4 {
   margin-top: 1rem;
 }
@@ -606,12 +616,6 @@ video {
 }
 .ml-2 {
   margin-left: 0.5rem;
-}
-.mb-3 {
-  margin-bottom: 0.75rem;
-}
-.ml-auto {
-  margin-left: auto;
 }
 .mb-5 {
   margin-bottom: 1.25rem;
@@ -646,6 +650,22 @@ video {
 .h-1 {
   height: 0.25rem;
 }
+.h-80 {
+  height: 20rem;
+}
+.h-8 {
+  height: 2rem;
+}
+.h-10 {
+  height: 2.5rem;
+}
+.h-max {
+  height: -moz-max-content;
+  height: max-content;
+}
+.h-2 {
+  height: 0.5rem;
+}
 .h-64 {
   height: 16rem;
 }
@@ -655,11 +675,11 @@ video {
 .h-60 {
   height: 15rem;
 }
+.h-96 {
+  height: 24rem;
+}
 .h-5 {
   height: 1.25rem;
-}
-.h-8 {
-  height: 2rem;
 }
 .h-full {
   height: 100%;
@@ -676,27 +696,17 @@ video {
 .h-3 {
   height: 0.75rem;
 }
-.h-10 {
-  height: 2.5rem;
-}
 .h-20 {
   height: 5rem;
 }
-.h-80 {
-  height: 20rem;
-}
-.h-96 {
-  height: 24rem;
-}
-.h-max {
-  height: -moz-max-content;
-  height: max-content;
-}
-.h-2 {
-  height: 0.5rem;
+.max-h-60 {
+  max-height: 15rem;
 }
 .max-h-96 {
   max-height: 24rem;
+}
+.max-h-40 {
+  max-height: 10rem;
 }
 .min-h-screen {
   min-height: 100vh;
@@ -713,6 +723,19 @@ video {
 }
 .w-44 {
   width: 11rem;
+}
+.w-max {
+  width: -moz-max-content;
+  width: max-content;
+}
+.w-8 {
+  width: 2rem;
+}
+.w-10 {
+  width: 2.5rem;
+}
+.w-2 {
+  width: 0.5rem;
 }
 .w-5\/12 {
   width: 41.666667%;
@@ -731,9 +754,6 @@ video {
 }
 .w-16 {
   width: 4rem;
-}
-.w-8 {
-  width: 2rem;
 }
 .w-11 {
   width: 2.75rem;
@@ -757,9 +777,6 @@ video {
 .w-1 {
   width: 0.25rem;
 }
-.w-2 {
-  width: 0.5rem;
-}
 .w-6 {
   width: 1.5rem;
 }
@@ -768,13 +785,6 @@ video {
 }
 .w-80 {
   width: 20rem;
-}
-.w-10 {
-  width: 2.5rem;
-}
-.w-max {
-  width: -moz-max-content;
-  width: max-content;
 }
 .min-w-max {
   min-width: -moz-max-content;
@@ -812,6 +822,9 @@ video {
 }
 .basis-0 {
   flex-basis: 0px;
+}
+.table-auto {
+  table-layout: auto;
 }
 .border-collapse {
   border-collapse: collapse;
@@ -863,6 +876,9 @@ video {
 .flex-wrap-reverse {
   flex-wrap: wrap-reverse;
 }
+.items-start {
+  align-items: flex-start;
+}
 .items-end {
   align-items: flex-end;
 }
@@ -899,11 +915,11 @@ video {
 .gap-4 {
   gap: 1rem;
 }
-.gap-8 {
-  gap: 2rem;
-}
 .gap-6 {
   gap: 1.5rem;
+}
+.gap-8 {
+  gap: 2rem;
 }
 .gap-0 {
   gap: 0px;
@@ -966,11 +982,11 @@ video {
 .rounded-tl-md {
   border-top-left-radius: 0.375rem;
 }
-.border-0 {
-  border-width: 0px;
-}
 .border {
   border-width: 1px;
+}
+.border-0 {
+  border-width: 0px;
 }
 .border-2 {
   border-width: 2px;
@@ -995,6 +1011,10 @@ video {
 }
 .border-none {
   border-style: none;
+}
+.border-\[\#6eb3a9\] {
+  --tw-border-opacity: 1;
+  border-color: rgb(110 179 169 / var(--tw-border-opacity));
 }
 .border-\[\#a05231\] {
   --tw-border-opacity: 1;
@@ -1051,6 +1071,18 @@ video {
   --tw-bg-opacity: 1;
   background-color: rgb(160 82 49 / var(--tw-bg-opacity));
 }
+.bg-black {
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+}
+.bg-\[\#2a5c56\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(42 92 86 / var(--tw-bg-opacity));
+}
+.bg-\[\#6eb3a9\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(110 179 169 / var(--tw-bg-opacity));
+}
 .bg-fuchsia-100\/10 {
   background-color: rgb(250 232 255 / 0.1);
 }
@@ -1071,19 +1103,11 @@ video {
 .bg-\[\#6eb3a9\]\/80 {
   background-color: rgb(110 179 169 / 0.8);
 }
-.bg-\[\#6eb3a9\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(110 179 169 / var(--tw-bg-opacity));
-}
 .bg-white\/70 {
   background-color: rgb(255 255 255 / 0.7);
 }
 .bg-\[\#6eb3a9\]\/60 {
   background-color: rgb(110 179 169 / 0.6);
-}
-.bg-\[\#2a5c56\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(42 92 86 / var(--tw-bg-opacity));
 }
 .bg-\[\#2a5c56\]\/10 {
   background-color: rgb(42 92 86 / 0.1);
@@ -1111,10 +1135,6 @@ video {
 .bg-fuchsia-100 {
   --tw-bg-opacity: 1;
   background-color: rgb(250 232 255 / var(--tw-bg-opacity));
-}
-.bg-black {
-  --tw-bg-opacity: 1;
-  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
 }
 .bg-\[url\(\'https\:\/\/uploads-ssl\.webflow\.com\/61cee5eb4d566d3471eca114\/61d2f2e602a2a8b328d55188_underline\%205\.svg\'\)\] {
   background-image: url('https://uploads-ssl.webflow.com/61cee5eb4d566d3471eca114/61d2f2e602a2a8b328d55188_underline%205.svg');
@@ -1193,11 +1213,11 @@ video {
 .p-1 {
   padding: 0.25rem;
 }
-.p-2 {
-  padding: 0.5rem;
-}
 .p-3 {
   padding: 0.75rem;
+}
+.p-2 {
+  padding: 0.5rem;
 }
 .p-4 {
   padding: 1rem;
@@ -1229,6 +1249,22 @@ video {
   padding-top: 0.25rem;
   padding-bottom: 0.25rem;
 }
+.py-5 {
+  padding-top: 1.25rem;
+  padding-bottom: 1.25rem;
+}
+.px-1 {
+  padding-left: 0.25rem;
+  padding-right: 0.25rem;
+}
+.px-6 {
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+}
+.py-4 {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+}
 .px-10 {
   padding-left: 2.5rem;
   padding-right: 2.5rem;
@@ -1237,21 +1273,9 @@ video {
   padding-left: 0.75rem;
   padding-right: 0.75rem;
 }
-.py-4 {
-  padding-top: 1rem;
-  padding-bottom: 1rem;
-}
 .px-4 {
   padding-left: 1rem;
   padding-right: 1rem;
-}
-.px-1 {
-  padding-left: 0.25rem;
-  padding-right: 0.25rem;
-}
-.py-5 {
-  padding-top: 1.25rem;
-  padding-bottom: 1.25rem;
 }
 .py-0 {
   padding-top: 0px;
@@ -1260,6 +1284,9 @@ video {
 .py-9 {
   padding-top: 2.25rem;
   padding-bottom: 2.25rem;
+}
+.pb-1 {
+  padding-bottom: 0.25rem;
 }
 .pt-8 {
   padding-top: 2rem;
@@ -1279,8 +1306,8 @@ video {
 .pt-2 {
   padding-top: 0.5rem;
 }
-.pb-1 {
-  padding-bottom: 0.25rem;
+.pb-8 {
+  padding-bottom: 2rem;
 }
 .pb-6 {
   padding-bottom: 1.5rem;
@@ -1290,6 +1317,12 @@ video {
 }
 .pt-1 {
   padding-top: 0.25rem;
+}
+.pt-0 {
+  padding-top: 0px;
+}
+.text-left {
+  text-align: left;
 }
 .text-center {
   text-align: center;
@@ -1302,6 +1335,9 @@ video {
 }
 .indent-3 {
   text-indent: 0.75rem;
+}
+.indent-5 {
+  text-indent: 1.25rem;
 }
 .indent-2 {
   text-indent: 0.5rem;
@@ -1371,14 +1407,17 @@ video {
 .font-light {
   font-weight: 300;
 }
-.font-thin {
-  font-weight: 100;
-}
 .font-extrabold {
   font-weight: 800;
 }
+.font-thin {
+  font-weight: 100;
+}
 .uppercase {
   text-transform: uppercase;
+}
+.leading-6 {
+  line-height: 1.5rem;
 }
 .leading-7 {
   line-height: 1.75rem;
@@ -1420,6 +1459,14 @@ video {
   --tw-text-opacity: 1;
   color: rgb(42 92 86 / var(--tw-text-opacity));
 }
+.text-black {
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity));
+}
+.text-green-500 {
+  --tw-text-opacity: 1;
+  color: rgb(34 197 94 / var(--tw-text-opacity));
+}
 .text-\[\#98bd75\] {
   --tw-text-opacity: 1;
   color: rgb(152 189 117 / var(--tw-text-opacity));
@@ -1432,13 +1479,13 @@ video {
   --tw-text-opacity: 1;
   color: rgb(110 179 169 / var(--tw-text-opacity));
 }
-.text-green-500 {
+.text-gray-500 {
   --tw-text-opacity: 1;
-  color: rgb(34 197 94 / var(--tw-text-opacity));
+  color: rgb(107 114 128 / var(--tw-text-opacity));
 }
-.text-black {
+.text-green-900 {
   --tw-text-opacity: 1;
-  color: rgb(0 0 0 / var(--tw-text-opacity));
+  color: rgb(20 83 45 / var(--tw-text-opacity));
 }
 .text-emerald-50 {
   --tw-text-opacity: 1;
@@ -1450,6 +1497,9 @@ video {
 }
 .underline {
   text-decoration-line: underline;
+}
+.opacity-60 {
+  opacity: 0.6;
 }
 .opacity-5 {
   opacity: 0.05;
@@ -1491,12 +1541,12 @@ video {
   --tw-shadow-color: #227791;
   --tw-shadow: var(--tw-shadow-colored);
 }
-.shadow-\[\#a05231\]\/30 {
-  --tw-shadow-color: rgb(160 82 49 / 0.3);
-  --tw-shadow: var(--tw-shadow-colored);
-}
 .shadow-\[\#dfb253\]\/40 {
   --tw-shadow-color: rgb(223 178 83 / 0.4);
+  --tw-shadow: var(--tw-shadow-colored);
+}
+.shadow-\[\#a05231\]\/30 {
+  --tw-shadow-color: rgb(160 82 49 / 0.3);
   --tw-shadow: var(--tw-shadow-colored);
 }
 .shadow-\[\#98bd75\] {
@@ -1623,6 +1673,18 @@ video {
     display: inline;
   }
 
+  .sm\:w-5\/12 {
+    width: 41.666667%;
+  }
+
+  .sm\:w-3\/12 {
+    width: 25%;
+  }
+
+  .sm\:w-7\/12 {
+    width: 58.333333%;
+  }
+
   .sm\:flex-row {
     flex-direction: row;
   }
@@ -1686,6 +1748,10 @@ video {
     width: 58.333333%;
   }
 
+  .md\:w-3\/12 {
+    width: 25%;
+  }
+
   .md\:w-2\/3 {
     width: 66.666667%;
   }
@@ -1731,6 +1797,10 @@ video {
     padding-right: 2.5rem;
   }
 
+  .md\:pt-0 {
+    padding-top: 0px;
+  }
+
   .md\:text-start {
     text-align: start;
   }
@@ -1771,18 +1841,9 @@ video {
     margin-bottom: 0px;
   }
 
-  .lg\:my-auto {
-    margin-top: auto;
-    margin-bottom: auto;
-  }
-
   .lg\:mx-0 {
     margin-left: 0px;
     margin-right: 0px;
-  }
-
-  .lg\:h-96 {
-    height: 24rem;
   }
 
   .lg\:w-7\/12 {
@@ -1797,12 +1858,17 @@ video {
     justify-content: space-between;
   }
 
-  .lg\:gap-5 {
-    gap: 1.25rem;
+  .lg\:gap-3 {
+    gap: 0.75rem;
   }
 
   .lg\:rounded-lg {
     border-radius: 0.5rem;
+  }
+
+  .lg\:text-lg {
+    font-size: 1.125rem;
+    line-height: 1.75rem;
   }
 
   .lg\:text-xl {
