--- a/views/pages/dashboard.ejs
+++ b/views/pages/dashboard.ejs
@@ -2,11 +2,12 @@
 <html lang="en">
   <%- include('../partials/head', { title: 'Dashboard' }) %>
   <body class="flex relative bg-fuchsia-500/5 overflow-hidden">
-    <%- include('../partials/err_toast') %> 
     <%- include('../partials/side_menu') %>
     <main
-      class="flex flex-col gap-5 grow h-screen px-5 py-8 md:p-10 max-w-5xl mx-auto overflow-y-auto"
+      class="flex flex-col gap-5 grow h-screen px-5 py-8 md:p-10 max-w-5xl mx-auto relative overflow-y-auto"
     >
+      <%- include('../partials/err_toast') %> <%-
+      include('../partials/success_toast') %>
       <h1 class="text-3xl md:text-5xl font-spray text-[#227791] w-full">
         Welcome Aboard,<br />
         <span
@@ -37,7 +38,7 @@
             <img src="/assets/marketplace.png" alt="" />
           </a>
           <span class="absolute -top-1 -right-1 text-xs font-sans font-semibold"
-            >0</span
+            ><%= availableSpaces %></span
           >
         </div>
       </div>
@@ -53,8 +54,8 @@
             </h2>
             <span
               class="text-right sm:text-start text-5xl text-white sm:text-[#72581f] font-spray font-medium"
-              ><%= followingCount %> </span
-            >
+              ><%= followingCount %>
+            </span>
           </div>
           <img
             src="/assets/following.png"
@@ -70,8 +71,8 @@
             </h2>
             <span
               class="text-right sm:text-start text-5xl text-white font-spray font-medium"
-              ><%= availableSpaces %> </span
-            >
+              ><%= availableSpaces %>
+            </span>
           </div>
           <img
             src="/assets/available_spaces.png"
