--- a/views/pages/auth_form.ejs
+++ b/views/pages/auth_form.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
   <%- include('../partials/head', {title: 'Authenticate User'}) %>
   <body class="bg-[#7ab9af]/30">
-    <%- include('../partials/err_toast') %>
+    <%- include('../partials/msg_toast'); %>
     <main
       class="flex flex-col items-center justify-center gap-3 h-screen m-auto max-w-4xl"
     >
