--- a/views/pages/dashboard.ejs
+++ b/views/pages/dashboard.ejs
@@ -6,8 +6,7 @@
     <main
       class="flex flex-col gap-5 grow h-screen px-5 py-8 md:p-10 max-w-5xl mx-auto relative overflow-y-auto"
     >
-      <%- include('../partials/err_toast') %> <%-
-      include('../partials/success_toast') %>
+      <%- include('../partials/msg_toast') %>
       <h1 class="text-3xl md:text-5xl font-spray text-[#227791] w-full">
         Welcome Aboard,<br />
         <span
