--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -2,6 +2,7 @@
 <html lang="en">
   <%- include('../partials/head', {title: 'Homepage'}); %>
   <body class="bg-fuchsia-100/10">
+    <%- include('../partials/msg_toast') %>
     <%- include('../partials/header') %>
     <main class="flex flex-col gap-2 pt-8 font-serif">
       <section>
