--- a/views/pages/marketplace.ejs
+++ b/views/pages/marketplace.ejs
@@ -6,8 +6,7 @@
     <main
       class="flex relative flex-col gap-5 grow min-h-screen px-5 py-8 md:p-10 max-w-6xl mx-auto overflow-hidden overflow-y-auto"
     >
-      <%- include('../partials/err_toast') %> <%-
-      include('../partials/success_toast') %>
+      <%- include('../partials/msg_toast') %>
       <div class="text-center font-serif text-[#dfb253]">
         <h1 class="text-3xl sm:text-5xl font-spray text-[#227791]">
           Eventreatise's Marketplace
