--- a/views/pages/space_form.ejs
+++ b/views/pages/space_form.ejs
@@ -6,8 +6,7 @@
     <main
       class="bg-[url('/assets/events.png')] bg-no-repeat bg-contain bg-right-bottom max-w-5xl mx-auto relative flex flex-col gap-5 my-5"
     >
-      <%- include('../partials/err_toast') %> <%-
-      include('../partials/success_toast') %>
+      <%- include('../partials/msg_toast') %>
       <div>
         <h1
           class="uppercase font-spray text-2xl md:text-3xl text-center text-[#227791]"
