--- a/views/pages/my_spaces.ejs
+++ b/views/pages/my_spaces.ejs
@@ -6,8 +6,7 @@
     <main
       class="flex relative flex-col gap-5 grow min-h-screen px-5 pb-8 md:p-10 md:pt-0 max-w-6xl mx-auto overflow-hidden overflow-y-auto"
     >
-      <%- include('../partials/err_toast') %> <%-
-      include('../partials/success_toast') %>
+      <%- include('../partials/msg_toast') %>
       <div
         class="bg-[url('/assets/my_spaces.svg')] bg-no-repeat bg-cover bg-center h-60"
       ></div>
