--- a/views/pages/dashboard.ejs
+++ b/views/pages/dashboard.ejs
@@ -29,7 +29,7 @@
             <img src="/assets/cart.png" alt="" />
           </a>
           <span class="absolute -top-1 -right-1 text-xs font-sans font-semibold"
-            >0</span
+            ><%= cartSize %></span
           >
         </div>
         <div class="relative bg-white p-1">
