--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -486,6 +486,21 @@ video {
 .sticky {
   position: sticky;
 }
+.-top-2 {
+  top: -0.5rem;
+}
+.-right-2 {
+  right: -0.5rem;
+}
+.right-1\/2 {
+  right: 50%;
+}
+.left-1\/2 {
+  left: 50%;
+}
+.-top-5 {
+  top: -1.25rem;
+}
 .-top-1 {
   top: -0.25rem;
 }
@@ -513,11 +528,11 @@ video {
 .-right-5 {
   right: -1.25rem;
 }
-.-top-5 {
-  top: -1.25rem;
-}
 .bottom-1 {
   bottom: 0.25rem;
+}
+.left-1 {
+  left: 0.25rem;
 }
 .left-20 {
   left: 5rem;
@@ -534,20 +549,50 @@ video {
 .right-4 {
   right: 1rem;
 }
-.-top-2 {
-  top: -0.5rem;
+.top-2 {
+  top: 0.5rem;
 }
-.-right-2 {
-  right: -0.5rem;
+.-left-2 {
+  left: -0.5rem;
+}
+.-left-3 {
+  left: -0.75rem;
+}
+.-left-6 {
+  left: -1.5rem;
+}
+.top-3 {
+  top: 0.75rem;
+}
+.-left-8 {
+  left: -2rem;
+}
+.-left-9 {
+  left: -2.25rem;
+}
+.-right-9 {
+  right: -2.25rem;
+}
+.-right-12 {
+  right: -3rem;
+}
+.right-2 {
+  right: 0.5rem;
+}
+.left-2 {
+  left: 0.5rem;
+}
+.-top-3 {
+  top: -0.75rem;
 }
 .z-10 {
   z-index: 10;
 }
-.-z-10 {
-  z-index: -10;
-}
 .z-20 {
   z-index: 20;
+}
+.-z-10 {
+  z-index: -10;
 }
 .col-span-1 {
   grid-column: span 1 / span 1;
@@ -606,6 +651,12 @@ video {
 .mb-2 {
   margin-bottom: 0.5rem;
 }
+.ml-3 {
+  margin-left: 0.75rem;
+}
+.mt-3 {
+  margin-top: 0.75rem;
+}
 .mb-3 {
   margin-bottom: 0.75rem;
 }
@@ -629,12 +680,6 @@ video {
 }
 .mb-5 {
   margin-bottom: 1.25rem;
-}
-.mt-3 {
-  margin-top: 0.75rem;
-}
-.ml-3 {
-  margin-left: 0.75rem;
 }
 .block {
   display: block;
@@ -662,6 +707,9 @@ video {
 }
 .h-screen {
   height: 100vh;
+}
+.h-3 {
+  height: 0.75rem;
 }
 .h-1 {
   height: 0.25rem;
@@ -709,9 +757,6 @@ video {
 .h-52 {
   height: 13rem;
 }
-.h-3 {
-  height: 0.75rem;
-}
 .h-20 {
   height: 5rem;
 }
@@ -737,12 +782,15 @@ video {
 .w-11\/12 {
   width: 91.666667%;
 }
-.w-44 {
-  width: 11rem;
+.w-3 {
+  width: 0.75rem;
 }
 .w-max {
   width: -moz-max-content;
   width: max-content;
+}
+.w-44 {
+  width: 11rem;
 }
 .w-8 {
   width: 2rem;
@@ -780,9 +828,6 @@ video {
 .w-4 {
   width: 1rem;
 }
-.w-3 {
-  width: 0.75rem;
-}
 .w-fit {
   width: -moz-fit-content;
   width: fit-content;
@@ -811,9 +856,27 @@ video {
 .w-40 {
   width: 10rem;
 }
+.w-72 {
+  width: 18rem;
+}
+.w-60 {
+  width: 15rem;
+}
+.w-64 {
+  width: 16rem;
+}
+.w-2\/3 {
+  width: 66.666667%;
+}
+.w-3\/4 {
+  width: 75%;
+}
 .min-w-max {
   min-width: -moz-max-content;
   min-width: max-content;
+}
+.min-w-full {
+  min-width: 100%;
 }
 .max-w-4xl {
   max-width: 56rem;
@@ -973,11 +1036,25 @@ video {
 .overflow-y-hidden {
   overflow-y: hidden;
 }
+.truncate {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
 .text-ellipsis {
   text-overflow: ellipsis;
 }
+.text-clip {
+  text-overflow: clip;
+}
+.whitespace-normal {
+  white-space: normal;
+}
 .whitespace-nowrap {
   white-space: nowrap;
+}
+.whitespace-pre-line {
+  white-space: pre-line;
 }
 .rounded-lg {
   border-radius: 0.5rem;
@@ -985,14 +1062,14 @@ video {
 .rounded-full {
   border-radius: 9999px;
 }
+.rounded-sm {
+  border-radius: 0.125rem;
+}
 .rounded-md {
   border-radius: 0.375rem;
 }
 .rounded-xl {
   border-radius: 0.75rem;
-}
-.rounded-sm {
-  border-radius: 0.125rem;
 }
 .rounded-2xl {
   border-radius: 1rem;
@@ -1022,6 +1099,9 @@ video {
 .border-2 {
   border-width: 2px;
 }
+.border-b {
+  border-bottom-width: 1px;
+}
 .border-l-2 {
   border-left-width: 2px;
 }
@@ -1040,9 +1120,6 @@ video {
 .border-t {
   border-top-width: 1px;
 }
-.border-b {
-  border-bottom-width: 1px;
-}
 .border-none {
   border-style: none;
 }
@@ -1060,25 +1137,25 @@ video {
 .border-\[\#a05231\]\/50 {
   border-color: rgb(160 82 49 / 0.5);
 }
+.border-green-900 {
+  --tw-border-opacity: 1;
+  border-color: rgb(20 83 45 / var(--tw-border-opacity));
+}
 .border-red-500 {
   --tw-border-opacity: 1;
   border-color: rgb(239 68 68 / var(--tw-border-opacity));
-}
-.border-green-500 {
-  --tw-border-opacity: 1;
-  border-color: rgb(34 197 94 / var(--tw-border-opacity));
 }
 .border-fuchsia-500 {
   --tw-border-opacity: 1;
   border-color: rgb(217 70 239 / var(--tw-border-opacity));
 }
+.border-green-500 {
+  --tw-border-opacity: 1;
+  border-color: rgb(34 197 94 / var(--tw-border-opacity));
+}
 .border-green-600 {
   --tw-border-opacity: 1;
   border-color: rgb(22 163 74 / var(--tw-border-opacity));
-}
-.border-green-900 {
-  --tw-border-opacity: 1;
-  border-color: rgb(20 83 45 / var(--tw-border-opacity));
 }
 .border-t-\[\#98bd75\] {
   --tw-border-opacity: 1;
@@ -1102,9 +1179,6 @@ video {
 .bg-fuchsia-500\/5 {
   background-color: rgb(217 70 239 / 0.05);
 }
-.bg-\[\#2a5c56\]\/30 {
-  background-color: rgb(42 92 86 / 0.3);
-}
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
@@ -1112,6 +1186,13 @@ video {
 .bg-\[\#a05231\] {
   --tw-bg-opacity: 1;
   background-color: rgb(160 82 49 / var(--tw-bg-opacity));
+}
+.bg-\[\#68b9d0\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(104 185 208 / var(--tw-bg-opacity));
+}
+.bg-\[\#2a5c56\]\/30 {
+  background-color: rgb(42 92 86 / 0.3);
 }
 .bg-black {
   --tw-bg-opacity: 1;
@@ -1154,21 +1235,21 @@ video {
 .bg-\[\#2a5c56\]\/10 {
   background-color: rgb(42 92 86 / 0.1);
 }
+.bg-\[\#dfb253\]\/20 {
+  background-color: rgb(223 178 83 / 0.2);
+}
+.bg-\[\#6eb3a9\]\/100 {
+  background-color: rgb(110 179 169 / 1);
+}
 .bg-yellow-100 {
   --tw-bg-opacity: 1;
   background-color: rgb(254 249 195 / var(--tw-bg-opacity));
-}
-.bg-\[\#dfb253\]\/20 {
-  background-color: rgb(223 178 83 / 0.2);
 }
 .bg-\[\#a05231\]\/20 {
   background-color: rgb(160 82 49 / 0.2);
 }
 .bg-\[\#a05231\]\/30 {
   background-color: rgb(160 82 49 / 0.3);
-}
-.bg-\[\#6eb3a9\]\/50 {
-  background-color: rgb(110 179 169 / 0.5);
 }
 .bg-fuchsia-500 {
   --tw-bg-opacity: 1;
@@ -1177,19 +1258,6 @@ video {
 .bg-fuchsia-100 {
   --tw-bg-opacity: 1;
   background-color: rgb(250 232 255 / var(--tw-bg-opacity));
-}
-.bg-\[\#6eb3a9\]\/100 {
-  background-color: rgb(110 179 169 / 1);
-}
-.bg-\[\#333d3c\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(51 61 60 / var(--tw-bg-opacity));
-}
-.bg-\[\#333d3c\]\/50 {
-  background-color: rgb(51 61 60 / 0.5);
-}
-.bg-\[\#333d3c\]\/70 {
-  background-color: rgb(51 61 60 / 0.7);
 }
 .bg-transparent {
   background-color: transparent;
@@ -1268,11 +1336,11 @@ video {
 .p-5 {
   padding: 1.25rem;
 }
-.p-1 {
-  padding: 0.25rem;
-}
 .p-3 {
   padding: 0.75rem;
+}
+.p-1 {
+  padding: 0.25rem;
 }
 .p-2 {
   padding: 0.5rem;
@@ -1303,13 +1371,17 @@ video {
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
 }
-.py-1 {
-  padding-top: 0.25rem;
-  padding-bottom: 0.25rem;
+.px-3 {
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
 }
 .py-5 {
   padding-top: 1.25rem;
   padding-bottom: 1.25rem;
+}
+.py-1 {
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
 }
 .px-1 {
   padding-left: 0.25rem;
@@ -1326,10 +1398,6 @@ video {
 .px-10 {
   padding-left: 2.5rem;
   padding-right: 2.5rem;
-}
-.px-3 {
-  padding-left: 0.75rem;
-  padding-right: 0.75rem;
 }
 .px-4 {
   padding-left: 1rem;
@@ -1415,11 +1483,11 @@ video {
 .font-rubik {
   font-family: Rubik Gemstones, cursive;
 }
-.font-sans {
-  font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-}
 .font-mono {
   font-family: Unbounded, ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+}
+.font-sans {
+  font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
 .text-4xl {
   font-size: 2.25rem;
@@ -1437,21 +1505,21 @@ video {
   font-size: 1.875rem;
   line-height: 2.25rem;
 }
+.text-sm {
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+}
 .text-xs {
   font-size: 0.75rem;
   line-height: 1rem;
-}
-.text-5xl {
-  font-size: 3rem;
-  line-height: 1;
 }
 .text-2xl {
   font-size: 1.5rem;
   line-height: 2rem;
 }
-.text-sm {
-  font-size: 0.875rem;
-  line-height: 1.25rem;
+.text-5xl {
+  font-size: 3rem;
+  line-height: 1;
 }
 .font-medium {
   font-weight: 500;
@@ -1505,13 +1573,27 @@ video {
   --tw-text-opacity: 1;
   color: rgb(200 103 61 / var(--tw-text-opacity));
 }
-.text-\[\#a05231\] {
+.text-\[\#68b9d0\] {
   --tw-text-opacity: 1;
-  color: rgb(160 82 49 / var(--tw-text-opacity));
+  color: rgb(104 185 208 / var(--tw-text-opacity));
+}
+.text-\[\#a05231\]\/30 {
+  color: rgb(160 82 49 / 0.3);
 }
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+.text-\[\#a05231\] {
+  --tw-text-opacity: 1;
+  color: rgb(160 82 49 / var(--tw-text-opacity));
+}
+.text-\[\#136075\] {
+  --tw-text-opacity: 1;
+  color: rgb(19 96 117 / var(--tw-text-opacity));
+}
+.text-black\/50 {
+  color: rgb(0 0 0 / 0.5);
 }
 .text-\[\#2a5c56\] {
   --tw-text-opacity: 1;
@@ -1520,6 +1602,10 @@ video {
 .text-black {
   --tw-text-opacity: 1;
   color: rgb(0 0 0 / var(--tw-text-opacity));
+}
+.text-green-900 {
+  --tw-text-opacity: 1;
+  color: rgb(20 83 45 / var(--tw-text-opacity));
 }
 .text-green-500 {
   --tw-text-opacity: 1;
@@ -1541,10 +1627,6 @@ video {
   --tw-text-opacity: 1;
   color: rgb(107 114 128 / var(--tw-text-opacity));
 }
-.text-green-900 {
-  --tw-text-opacity: 1;
-  color: rgb(20 83 45 / var(--tw-text-opacity));
-}
 .text-emerald-50 {
   --tw-text-opacity: 1;
   color: rgb(236 253 245 / var(--tw-text-opacity));
@@ -1552,30 +1634,6 @@ video {
 .text-blue-900 {
   --tw-text-opacity: 1;
   color: rgb(30 58 138 / var(--tw-text-opacity));
-}
-.text-\[\#68b9d0\] {
-  --tw-text-opacity: 1;
-  color: rgb(104 185 208 / var(--tw-text-opacity));
-}
-.text-\[\#a05231\]\/40 {
-  color: rgb(160 82 49 / 0.4);
-}
-.text-\[\#a05231\]\/30 {
-  color: rgb(160 82 49 / 0.3);
-}
-.text-\[\#a05231\]\/50 {
-  color: rgb(160 82 49 / 0.5);
-}
-.text-black\/50 {
-  color: rgb(0 0 0 / 0.5);
-}
-.text-\[\#0e353f\] {
-  --tw-text-opacity: 1;
-  color: rgb(14 53 63 / var(--tw-text-opacity));
-}
-.text-\[\#136075\] {
-  --tw-text-opacity: 1;
-  color: rgb(19 96 117 / var(--tw-text-opacity));
 }
 .underline {
   text-decoration-line: underline;
@@ -1600,14 +1658,14 @@ video {
   --tw-shadow-colored: 0 25px 50px -12px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
-.shadow-md {
-  --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
 .shadow-lg {
   --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+.shadow-md {
+  --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 .shadow-xl {
@@ -1666,12 +1724,17 @@ video {
 .ease-in-out {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-.first-letter\:uppercase::first-letter {
-  text-transform: uppercase;
+.line-clamp-3 {
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 3;
 }
-.first-letter\:text-\[\#a05231\]::first-letter {
-  --tw-text-opacity: 1;
-  color: rgb(160 82 49 / var(--tw-text-opacity));
+.line-clamp-1 {
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 1;
 }
 .file\:mr-4::file-selector-button {
   margin-right: 1rem;
@@ -1766,14 +1829,6 @@ video {
     width: 41.666667%;
   }
 
-  .sm\:w-3\/12 {
-    width: 25%;
-  }
-
-  .sm\:w-7\/12 {
-    width: 58.333333%;
-  }
-
   .sm\:grow-0 {
     flex-grow: 0;
   }
@@ -1811,26 +1866,6 @@ video {
     text-align: start;
   }
 
-  .sm\:text-4xl {
-    font-size: 2.25rem;
-    line-height: 2.5rem;
-  }
-
-  .sm\:text-5xl {
-    font-size: 3rem;
-    line-height: 1;
-  }
-
-  .sm\:text-3xl {
-    font-size: 1.875rem;
-    line-height: 2.25rem;
-  }
-
-  .sm\:text-2xl {
-    font-size: 1.5rem;
-    line-height: 2rem;
-  }
-
   .sm\:text-xl {
     font-size: 1.25rem;
     line-height: 1.75rem;
@@ -1844,6 +1879,16 @@ video {
   .sm\:text-lg {
     font-size: 1.125rem;
     line-height: 1.75rem;
+  }
+
+  .sm\:text-4xl {
+    font-size: 2.25rem;
+    line-height: 2.5rem;
+  }
+
+  .sm\:text-5xl {
+    font-size: 3rem;
+    line-height: 1;
   }
 
   .sm\:font-bold {
@@ -1884,10 +1929,6 @@ video {
 
   .md\:w-2\/3 {
     width: 66.666667%;
-  }
-
-  .md\:w-80 {
-    width: 20rem;
   }
 
   .md\:grid-cols-3 {
@@ -1943,6 +1984,11 @@ video {
     font-family: Unbounded, ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
   }
 
+  .md\:text-2xl {
+    font-size: 1.5rem;
+    line-height: 2rem;
+  }
+
   .md\:text-5xl {
     font-size: 3rem;
     line-height: 1;
@@ -1951,11 +1997,6 @@ video {
   .md\:text-4xl {
     font-size: 2.25rem;
     line-height: 2.5rem;
-  }
-
-  .md\:text-2xl {
-    font-size: 1.5rem;
-    line-height: 2rem;
   }
 
   .md\:text-lg {
@@ -2000,19 +2041,9 @@ video {
     border-radius: 0.5rem;
   }
 
-  .lg\:text-lg {
-    font-size: 1.125rem;
-    line-height: 1.75rem;
-  }
-
   .lg\:text-xl {
     font-size: 1.25rem;
     line-height: 1.75rem;
-  }
-
-  .lg\:text-sm {
-    font-size: 0.875rem;
-    line-height: 1.25rem;
   }
 
   .lg\:shadow-lg {
