--- a/views/pages/marketplace.ejs
+++ b/views/pages/marketplace.ejs
@@ -146,8 +146,8 @@
           <div
             class="flex gap-2 justify-between w-full px-2 pb-1 items-end font-serif text-[#2a5c56] text-sm"
           >
-            <p class="text-[#a05231]">
-              Maximum Capacity: <strong> <%= space.maxCapacity %> </strong>
+            <p class="text-[#a05231] text-sm md:text-lg font-mono font-bold">
+              <%= space.rentPrice %>
             </p>
             <a
               href="/dashboard/marketplace/<%= space._id %> "
