--- a/views/partials/side_menu.ejs
+++ b/views/partials/side_menu.ejs
@@ -1,4 +1,5 @@
 <aside
+  id="dashboard-side-menu"
   class="sticky top-0 flex justify-center border-t-4 border-b-4 border-[#a05231] px-1 flex-col gap-6 py-5 bg-[#7ab9af]/30 h-screen"
 >
   <div class="m-auto"><%- include('../partials/logo') %></div>
@@ -25,7 +26,7 @@
       </a>
     </li>
     <li
-      class="self-center my-5 p-2 rounded-full bg-[#a05231] shadow-md shadow-[#98bd75]"
+      class="self-center my-5 p-2 rounded-full bg-[#dfb253] shadow-md shadow-[#98bd75]"
     >
       <a href="/dashboard">
         <img src="/assets/home_icon.png" alt="Dashboard Home" />
@@ -56,3 +57,4 @@
     <div class="w-8 h-full bg-[#a05231] rounded-full shadow-md"></div>
   </div>
 </aside>
+<script src="/scripts/active_db_nav.js" async></script>
