--- a/views/pages/eventspace.ejs
+++ b/views/pages/eventspace.ejs
@@ -119,15 +119,16 @@
                 </span>
               </div>
             </a>
+            <p class="text-sm md:text-lg ml-auto text-[#a05231] font-extrabold"><%= space.rentPrice %></p>
           </div>
           <p
             class="font-sans font-bold flex text-sm lg:text-md gap-2 items-center sticky top-1 text-[#dfb253] justify-center"
           >
-          <a
-          href="tel:+<%= space.manager.phoneNumber %>"
-          class="px-3 py-2 text-center bg-[#a05231] shadow-lg rounded-full"
-          >Call Manager</a
-        >
+            <a
+              href="tel:+<%= space.manager.phoneNumber %>"
+              class="px-3 py-2 text-center bg-[#a05231] shadow-lg rounded-full"
+              >Call Manager</a
+            >
             <% if (cart && cart.eventSpaces.indexOf(space._id) !== -1) { %>
             <span
               class="px-3 py-2 text-green-900 bg-[url('https://uploads-ssl.webflow.com/61cee5eb4d566d3471eca114/61d2f2e602a2a8b328d55188_underline%205.svg')] bg-no-repeat bg-contain bg-bottom text-center"
@@ -173,6 +174,10 @@
           >
           <% } %>
         </div>
+        <hr class="w-2/3 mx-auto my-1" />
+        <p class="text-[#2a5c56] text-center text-sm font-serif font-light">
+          <%= space.manager.bio %>
+        </p>
       </section>
       <div class="w-full overflow-x-auto relative flex flex-col gap-2 my-5">
         <h2 class="uppercase text-xl font-bold text-[#a05231]">
